--- a/src/App.css
+++ b/src/App.css
@@ -2,45 +2,80 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: "Montserrat", sans-serif;
 }
 header {
-  background: #f5f5f5;
+  background: #2980b9;
 }
 header > h2 {
-  padding: 1rem;
-  font-size: 1.5rem;
+  padding-top: 2rem;
+  font-size: 2.5rem;
+  font-family: "Nunito", sans-serif;
+  font-weight: 600;
   text-align: center;
+  color: #fff;
 }
 header > p {
   padding: 1rem;
   font-size: 1.2rem;
+  font-weight: 200;
+  color: #fff;
   text-align: center;
 }
-.gm-style .gm-style-iw {
+h2 {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-size: 1.8rem;
+}
+p {
+  font-size: 1.2rem;
+  padding-bottom: 10px;
+}
+button {
+  border: none;
+  border-radius: 10px;
+  outline: none;
+  background: #ffb20f;
+  font-size: 1.1rem;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+button:hover,
+:focus {
+  cursor: pointer;
+  background-image: radial-gradient(
+    circle 597px at 93% 9.8%,
+    rgba(255, 61, 89, 1) 1.7%,
+    rgba(252, 251, 44, 1) 97%
+  );
+}
+a {
+  text-decoration: none;
+  color: #fff;
+}
+/* .gm-style .gm-style-iw {
   background-color: #f5f5f5 !important;
-  /* top: 10px !important;
+  top: 10px !important;
   left: 0 !important;
   width: 100% !important;
   height: 100% !important;
-  min-height: 500px !important;
+  min-height: 300px !important;
   padding-top: 10px;
-  display: block !important; */
+  display: block !important;
 }
-/* style the image */
 .gm-style img {
   max-width: 100%;
 }
-/*style the p tag*/
 .gm-style .gm-style-iw #google-popup p {
+  font-size: 1.3rem;
   padding: 10px;
 }
-/*style the arrow*/
 .gm-style div div div div div div div div {
-  background-color: #3c61ad !important;
+  background-color: #8d939e !important;
   padding: 0;
   margin: 0;
   padding: 0;
   top: 0;
   color: #fff;
   font-size: 16px;
-}
+} */
